syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";

message ProductionStationEfficiencyInfo {
    string id=1;
	//产出日期
	string outputDate=2;
	//当日产量
	int32 outputOfThisDay=3;
	//作业次数
	int32 numberOfWork=4;
	//合格次数
	int32 numberOfPass=5;
	//失败次数
	int32 numberOfFail=6;
	//一次通过率
	float fPY=7;
	//理论节拍
	float estimateRhythm=8;
	//平均节拍
	float averageRhythm=9;
	//开机时长
	float startupDuration=10;
	//计划内停机时长
	float plannedShutdownDuration=11;
	//预计稼动时长
	float estimateAvailableDuration=12;
	//故障次数
	int32 numberOfBreakdown=13;
	//故障时长
	float breakdownDuration=14;
	//计划外停机次数
	int32 numberOfShutdown=15;
	//计划外停机时长
	float unplannedShutdownDuration=16;
	//设备故障率
	float oEF=17;
	//实际稼动时长
	float actualAvailableDuration=18;
	//实际作业时长
	float actualEffectiveDuration=19;
	//时间稼动率
	float oEU=20;
	//性能稼动率
	float oEP=21;
	//设备综合效率
	float oEE=22;
	//最后更新时间
	string lastUpdateTime=23;
	//生产工站ID
	string productionStationID=24;
	ProductionStationInfo productionStation=25;
}

message QueryProductionStationEfficiencyRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//创建时间开始
    // @inject_tag: uri:"outputDate0" form:"outputDate0"
    string outputDate0=5;
    //创建时间结束
    // @inject_tag: uri:"outputDate1" form:"outputDate1"
    string outputDate1=6;
    //生产产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=14;
}

message QueryProductionStationEfficiencyResponse{
    Code code=1;
    string message=2;
    repeated ProductionStationEfficiencyInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductionStationEfficiencyResponse{
    Code code=1;
    string message=2;
    repeated ProductionStationEfficiencyInfo data=3;
}

message GetProductionStationEfficiencyDetailResponse{
    Code code=1;
    string message=2;
    ProductionStationEfficiencyInfo data=3;
}